...
        <GradientDivider />

        <Section title={t('muscles.function')}>
          <Text style={styles.bodyText}>{primaryFunction}</Text>
        </Section>

        <Section title={t('muscles.origin')} testID="MuscleDetailScreen:OriginSection">
          <Text style={styles.bodyText}>{origin}</Text>
        </Section>

        <Section title={t('muscles.insertion')}>
          <Text style={styles.bodyText}>{insertion}</Text>
        </Section>
...
